--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scrum Master Quiz</title>
-  </head>
-  <body>
+    <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Scrum Master Quiz 2025 — a free quiz to help Agile professionals prepare for the PSM I exam. Built by John Clohessy, Scrum Master and Agile Coach.">
+  <title>Scrum Master Quiz 2025 | John Clohessy</title>
+</head>
     <div id="root"></div>
   </body>
 </html>
